--- a/mysite/mysite/templates/about.html
+++ b/mysite/mysite/templates/about.html
@@ -6,7 +6,6 @@
 {% block body %}
 
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <main role="main">
 
   <!-- Main jumbotron for a primary marketing message or call to action -->
@@ -14,7 +13,7 @@
     <div class="container">
       <h1 class="display-3">About Us</h1>
       <p>This is an about page which stores all my information related to this website which is made my me.As it is an introductory website and I have to write more about this.It is a dummy website for an e-commerce use. I practice my skills through this website and wanted to show it to everyone to present it.</p>
-      <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more »</a></p>
+      <p><a class="btn btn-primary btn-lg" href="/aboutus/" role="button">Learn more »</a></p>
     </div>
   </div>
 
@@ -39,19 +38,7 @@
   </div>
 </main>
 
-<footer class="container">
-  <p>
-    <center>
-  <div>Follow us on:</div><br>
-  <div><a href="https://www.facebook.com/naman.yadav.315" class="fa fa-facebook"></a>
-  <a href="#" class="fa fa-twitter mx-4"></a>
-    <a href="https://www.instagram.com/namanyadav2104/" class="fa fa-instagram"></a>
-  </div>
-</center>
-  </p>
-</footer>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-      <script>window.jQuery || document.write('<script src="/docs/4.3/assets/js/vendor/jquery-slim.min.js"><\/script>')</script><script src="/docs/4.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script>
+
 
 
 {% endblock %}
