--- a/mysite/blog/templates/blog/blogpost.html
+++ b/mysite/blog/templates/blog/blogpost.html
@@ -33,8 +33,8 @@
 
     <aside class="col-md-4 blog-sidebar">
       <div class="p-4 mb-3 bg-light rounded">
-        <h4 class="font-italic">About</h4>
-        <p class="mb-0">Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
+        <h4 class="font-italic">Summary</h4>
+        <p class="mb-0">{{post.summary}}</p>
       <div class="fb-share-button" data-href="http://127.0.0.1:8000/blog/blogpost/{{post.post_id}}" data-layout="button_count" data-size="large"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2F127.0.0.1%3A8000%2Fblog%2Fblogpost%2F1&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
       </div>
 
@@ -43,9 +43,10 @@
       <div class="p-4">
         <h4 class="font-italic">Contact us on:</h4>
         <ol class="list-unstyled">
-          <li><a href="#">GitHub</a></li>
-          <li><a href="#">Twitter</a></li>
-          <li><a href="#">Facebook</a></li>
+          <li><a href="https://github.com/Naman2104">GitHub</a></li>
+          <!--<li><a href="#">Twitter</a></li>-->
+          <li><a href="https://www.facebook.com/naman.yadav.315">Facebook</a></li>
+          <li><a href="/contact/">Directly through our website</a></li>
         </ol>
       </div>
     </aside><!-- /.blog-sidebar -->
